--- a/even-distribution/even-distribution_0.1.0/locale/en/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.1.0/locale/en/even-distribution.cfg
@@ -1,7 +1,7 @@
-[setting-name]
+[mod-setting-name]
 distribution-delay=Distribution delay
 take-from-car=Take items from car
 
-[setting-description]
+[mod-setting-description]
 distribution-delay=The delay in seconds before items are evenly distributed over multiple buildings.
 take-from-car=If activated items are also taken from the car the player is driving.
