Added option to prevent machines from starting to craft immediately upon selection

--- a/even-distribution/even-distribution_0.2.1/locale/en/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.2.1/locale/en/even-distribution.cfg
@@ -5,6 +5,7 @@ max-inventory-cleanup-drop-range=Max inventory cleanup drop range
 inventory-cleanup-custom-trash=Inventory cleanup custom trash
 early-autotrash-research=Early Autotrash Research
 cleanup-logistic-request-overflow=Cleanup logistic request overflow
+immediately-start-crafting=Immediately start crafting
 
 [mod-setting-description]
 distribution-delay=The delay in seconds before items are evenly distributed over multiple buildings.
@@ -13,6 +14,7 @@ max-inventory-cleanup-drop-range=For use with inventory cleanup hotkey (SHIFT + 
 inventory-cleanup-custom-trash=For use with inventory cleanup hotkey (SHIFT + C)!\n\nAdditional custom list of items that are considered trash. The hotkey will evenly distribute excess trash items into nearby machines. Overridden by autotrash.\n\nItem names with desired amounts to keep in inventory (seperated by spaces).
 early-autotrash-research=For use with inventory cleanup hotkey (SHIFT + C)!\n\nResearch autotrash earlier for easier selection of trash items. The hotkey will evenly distribute excess trash items into nearby machines.
 cleanup-logistic-request-overflow=For use with inventory cleanup hotkey (SHIFT + C)!\n\nItems which exceed the players logistic request amount are also considered trash. The hotkey will evenly distribute excess trash items into nearby machines.
+immediately-start-crafting=If activated crafting machines immediately start crafting upon selection instead of waiting for the distribution to happen.
 
 [controls]
 inventory-cleanup=Inventory Cleanup
