--- a/even-distribution/even-distribution_0.2.2/locale/en/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.2.2/locale/en/even-distribution.cfg
@@ -6,6 +6,7 @@ inventory-cleanup-custom-trash=Inventory cleanup custom trash
 early-autotrash-research=Early Autotrash Research
 cleanup-logistic-request-overflow=Cleanup logistic request overflow
 immediately-start-crafting=Immediately start crafting
+drop-trash-to-chests=Drop trash to chests
 
 [mod-setting-description]
 distribution-delay=The delay in seconds before items are evenly distributed over multiple buildings.
@@ -15,6 +16,7 @@ inventory-cleanup-custom-trash=For use with inventory cleanup hotkey (SHIFT + C)
 early-autotrash-research=For use with inventory cleanup hotkey (SHIFT + C)!\n\nResearch autotrash earlier for easier selection of trash items. The hotkey will evenly distribute excess trash items into nearby machines.
 cleanup-logistic-request-overflow=For use with inventory cleanup hotkey (SHIFT + C)!\n\nItems which exceed the players logistic request amount are also considered trash. The hotkey will evenly distribute excess trash items into nearby machines.
 immediately-start-crafting=If activated crafting machines immediately start crafting upon selection instead of waiting for the distribution to happen.
+drop-trash-to-chests=For use with inventory cleanup hotkey (SHIFT + C)!\n\nExcess trash items are also dropped to nearby chests already containing the item. (This setting is ignored for requester chests)
 
 [controls]
 inventory-cleanup=Inventory Cleanup
