--- a/even-distribution/even-distribution_0.2.2/locale/en/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.2.2/locale/en/even-distribution.cfg
@@ -19,7 +19,7 @@ immediately-start-crafting=If activated crafting machines immediately start craf
 drop-trash-to-chests=For use with inventory cleanup hotkey (SHIFT + C)!\n\nExcess trash items are also dropped to nearby chests already containing the item. (This setting is ignored for requester chests)
 
 [controls]
-inventory-cleanup=Inventory Cleanup
+inventory-cleanup=Inventory Cleanup [?]
 
 [controls-description]
 inventory-cleanup=Evenly distribute excess trash items into nearby machines.\n\nIncluding raw unwanted items, trash slots and autotrashed items.\nEnable autotrash earlier for easier selection of trash items.\n\nSee mod settings for customization.
