--- a/even-distribution/even-distribution_0.2.2/locale/de/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.2.2/locale/de/even-distribution.cfg
@@ -1,7 +1,26 @@
 [mod-setting-name]
 distribution-delay=Zeit bis zur Verteilung
 take-from-car=Gegenstände aus dem Auto miteinbeziehen
+max-inventory-cleanup-drop-range=Maximale Verteilungsreichweite
+inventory-cleanup-custom-trash=Inventar Bereinigungs Abfall-Liste
+early-autotrash-research=Frühzeitige Erforschung der Abfall-Logistikplätze
+cleanup-logistic-request-overflow=Bereinige überschüssige Logistikanforderungen
+immediately-start-crafting=Sofortiger Crafting-Start
+drop-trash-to-chests=Verteile Abfall auf Truhen
+
 
 [mod-setting-description]
 distribution-delay=Die Zeit in Sekunden die gewartet werden soll, bis die Gegenstände gleichmäßig auf mehrere Gebäude verteilt werden.
 take-from-car=Wenn aktiviert, werden Gegenstände aus dem Auto, das der Spieler gerade fährt, in die gleichmäßige Verteilung miteinbezogen.
+max-inventory-cleanup-drop-range=Zur Verwendung mit Inventar Bereinigungs-hotkey (SHIFT + C)!\n\nMaximale Verteilungsreichweite. Eigentliche Reichweite basiert auf der Reichweite des Charakters. Hohe Werte können die Performance beeinflussen.
+inventory-cleanup-custom-trash=Zur Verwendung mit Inventar Bereinigungs-hotkey (SHIFT + C)!\n\nZusätzliche Liste mit Müll-Gegenständen. Der Hotkey verteilt überschüssige Müll-Gegenstände gleichmäßig auf Maschinen in der Nähe. Überschrieben durch die Abfall-Logistikplätze.\n\n Gegenstandsnamen mit der gewünschten Anzahl die im Inventar behalten werden soll (getrennt durch Leerzeichen).
+early-autotrash-research=Zur Verwendung mit Inventar Bereinigungs-hotkey (SHIFT + C)!\n\nErforsche die Abfall-Logistikplätze früher um einfacher Abfall auszuwählen. Der Hotkey verteilt überschüssige Müll-Gegenstände gleichmäßig auf Maschinen in der Nähe.
+cleanup-logistic-request-overflow=Zur Verwendung mit Inventar Bereinigungs-hotkey (SHIFT + C)!\n\nÜberschüssige Logistikanforderungen werden als Abfall angesehen. Der Hotkey verteilt überschüssige Müll-Gegenstände gleichmäßig auf Maschinen in der Nähe.
+immediately-start-crafting=Wenn aktiviert, werden Crafting-Maschinen sofort mit dem Craften beginnen also erst auf die Verteilung zu warten.
+drop-trash-to-chests=Zur Verwendung mit Inventar Bereinigungs-hotkey (SHIFT + C)!\n\nÜberschüssiger Abfall wird auch auf Truhen in der Nähe, die den Gegenstand bereits beinhalten, verteilt. (Dies gilt nicht für Anforderungskisten)
+
+[controls]
+inventory-cleanup=Inventar Bereinigung [?]
+
+[controls-description]
+inventory-cleanup=Verteile überschüssige Abfall-Gegenstände gleichmäßig auf Maschinen in der Nähe.\n\nInklusive rohe unnützliche Gegenstände, Abfall-Logistikplätze und überschüssige Logistikanforderungen\nErforsche die Abfall-Logistikplätze früher um einfacher Abfall auszuwählen.\n\nSiehe Mod-Einstellungen für Individualisierung.
