Added ignored entities setting Refactoring of parsed settings related code

--- a/even-distribution/even-distribution_0.2.4/locale/en/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.2.4/locale/en/even-distribution.cfg
@@ -7,6 +7,7 @@ early-autotrash-research=Early Autotrash Research
 cleanup-logistic-request-overflow=Cleanup logistic request overflow
 immediately-start-crafting=Immediately start crafting
 drop-trash-to-chests=Drop trash to chests
+ignored-entities=Ignored entities
 
 [mod-setting-description]
 distribution-delay=The delay in seconds before items are evenly distributed over multiple buildings.
@@ -17,9 +18,14 @@ early-autotrash-research=For use with inventory cleanup hotkey (SHIFT + C)!\n\nR
 cleanup-logistic-request-overflow=For use with inventory cleanup hotkey (SHIFT + C)!\n\nItems which exceed the players logistic request amount are also considered trash. The hotkey will evenly distribute excess trash items into nearby machines.
 immediately-start-crafting=If activated crafting machines immediately start crafting upon selection instead of waiting for the distribution to happen.
 drop-trash-to-chests=For use with inventory cleanup hotkey (SHIFT + C)!\n\nExcess trash items are also dropped to nearby chests already containing the item. (This setting is ignored for requester chests)
+ignored-entities=Entities that are ignored when distributing in any way.\n\nEntity names seperated by spaces.\nExample: "steel-furnace iron-chest"
 
 [controls]
 inventory-cleanup=Inventory Cleanup [?]
 
 [controls-description]
 inventory-cleanup=Evenly distribute excess trash items into nearby machines.\n\nIncluding raw unwanted items, trash slots and autotrashed items.\nEnable autotrash earlier for easier selection of trash items.\n\nSee mod settings for customization.
+
+[message]
+setting-parse-error=Even Distribution: Invalid __1__ setting '__2__'__3__. Value has been ignored.
+for-user= for user __1__
