--- a/even-distribution/even-distribution_0.2.4/locale/de/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.2.4/locale/de/even-distribution.cfg
@@ -7,7 +7,7 @@ early-autotrash-research=Frühzeitige Erforschung der Abfall-Logistikplätze
 cleanup-logistic-request-overflow=Bereinige überschüssige Logistikanforderungen
 immediately-start-crafting=Sofortiger Crafting-Start
 drop-trash-to-chests=Verteile Abfall auf Truhen
-
+ignored-entities=Ignorierte Bauten
 
 [mod-setting-description]
 distribution-delay=Die Zeit in Sekunden die gewartet werden soll, bis die Gegenstände gleichmäßig auf mehrere Gebäude verteilt werden.
@@ -18,6 +18,7 @@ early-autotrash-research=Zur Verwendung mit Inventar Bereinigungs-hotkey (SHIFT 
 cleanup-logistic-request-overflow=Zur Verwendung mit Inventar Bereinigungs-hotkey (SHIFT + C)!\n\nÜberschüssige Logistikanforderungen werden als Abfall angesehen. Der Hotkey verteilt überschüssige Müll-Gegenstände gleichmäßig auf Maschinen in der Nähe.
 immediately-start-crafting=Wenn aktiviert, werden Crafting-Maschinen sofort mit dem Craften beginnen also erst auf die Verteilung zu warten.
 drop-trash-to-chests=Zur Verwendung mit Inventar Bereinigungs-hotkey (SHIFT + C)!\n\nÜberschüssiger Abfall wird auch auf Truhen in der Nähe, die den Gegenstand bereits beinhalten, verteilt. (Dies gilt nicht für Anforderungskisten)
+ignored-entities=Ziele die bei der Verteilung ignoriert werden.\n\nInterne Namen getrennt durch Leerzeichen.\nBeispiel: "steel-furnace iron-chest"
 
 [controls]
 inventory-cleanup=Inventar Bereinigung [?]
