Added usage message at the start of a game for newer players.

--- a/even-distribution/even-distribution_0.2.6/locale/en/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.2.6/locale/en/even-distribution.cfg
@@ -22,10 +22,11 @@ ignored-entities=Entities that are ignored when distributing in any way.\n\nEnti
 
 [controls]
 inventory-cleanup=Inventory Cleanup [?]
-
+	
 [controls-description]
 inventory-cleanup=Evenly distribute excess trash items into nearby machines.\n\nIncluding raw unwanted items, trash slots and autotrashed items.\nEnable autotrash earlier for easier selection of trash items.\n\nSee mod settings for customization.
 
 [message]
 setting-parse-error=Even Distribution: Invalid __1__ setting '__2__'__3__. Value has been ignored.
 for-user= for user __1__
+usage=[Even Distribution] Remember: When distributing items, start dragging the mouse while NOT hovering over a building.
