--- a/even-distribution/even-distribution_0.2.6/locale/de/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.2.6/locale/de/even-distribution.cfg
@@ -25,3 +25,6 @@ inventory-cleanup=Inventar Bereinigung [?]
 
 [controls-description]
 inventory-cleanup=Verteile überschüssige Abfall-Gegenstände gleichmäßig auf Maschinen in der Nähe.\n\nInklusive rohe unnützliche Gegenstände, Abfall-Logistikplätze und überschüssige Logistikanforderungen\nErforsche die Abfall-Logistikplätze früher um einfacher Abfall auszuwählen.\n\nSiehe Mod-Einstellungen für Individualisierung.
+
+[message]
+usage=[Even Distribution] Wichtig: Wenn du die Maus über mehrere Gebäude ziehst um Items zu verteilen, beginne mit einem Klick auf einem LEEREN FELD!
