Added per player setting to disable even distribution

--- a/even-distribution/even-distribution_0.2.7/locale/en/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.2.7/locale/en/even-distribution.cfg
@@ -1,4 +1,5 @@
 [mod-setting-name]
+enable-ed=Enable Even Distribution
 distribution-delay=Distribution delay
 take-from-car=Take items from car
 max-inventory-cleanup-drop-range=Max inventory cleanup drop range
@@ -10,6 +11,7 @@ drop-trash-to-chests=Drop trash to chests
 ignored-entities=Ignored entities
 
 [mod-setting-description]
+enable-ed=This does not affect the inventory cleanup hotkey.
 distribution-delay=The delay in seconds before items are evenly distributed over multiple buildings.
 take-from-car=If activated items are also taken from the car the player is driving.
 max-inventory-cleanup-drop-range=For use with inventory cleanup hotkey (SHIFT + C)!\n\nMaximum item drop range. Actual drop range scales with character reach distance. High values may impact performance.
