Added german translation for enable-ed setting

--- a/even-distribution/even-distribution_0.2.7/locale/de/even-distribution.cfg
+++ b/even-distribution/even-distribution_0.2.7/locale/de/even-distribution.cfg
@@ -1,4 +1,5 @@
 [mod-setting-name]
+enable-ed=Even Distribution aktivieren
 distribution-delay=Zeit bis zur Verteilung
 take-from-car=Gegenstände aus dem Auto miteinbeziehen
 max-inventory-cleanup-drop-range=Maximale Verteilungsreichweite
@@ -10,6 +11,7 @@ drop-trash-to-chests=Verteile Abfall auf Truhen
 ignored-entities=Ignorierte Bauten
 
 [mod-setting-description]
+enable-ed=Der Inventar Bereinigungs-Hotkey ist immer aktiviert.
 distribution-delay=Die Zeit in Sekunden, die gewartet werden soll, bis die Gegenstände gleichmäßig auf mehrere Gebäude verteilt werden.
 take-from-car=Wenn aktiviert, werden Gegenstände aus dem Fahrzeug, das der Spieler gerade fährt, in die gleichmäßige Verteilung miteinbezogen.
 max-inventory-cleanup-drop-range=Zur Verwendung mit Inventar Bereinigungs-Hotkey (SHIFT + C)!\n\nMaximale Verteilungsreichweite. Eigentliche Reichweite basiert auf der Reichweite des Charakters. Hohe Werte können die Performance beeinflussen.
