--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -29,6 +29,6 @@ inventory-cleanup=Inventory Cleanup [?]
 inventory-cleanup=Evenly distribute excess trash items into nearby machines.\n\nIncluding raw unwanted items, trash slots and autotrashed items.\nEnable autotrash earlier for easier selection of trash items.\n\nSee mod settings for customization.
 
 [message]
-setting-parse-error=Even Distribution: Invalid __1__ setting '__2__'__3__. Value has been ignored.
+setting-parse-error=[Even Distribution] Invalid value '__2__' in per-player mod setting '__1__'__3__. Value has been ignored.
 for-user= for user __1__
 usage=[Even Distribution] Remember: When distributing items, start dragging the mouse while NOT hovering over a building.
