--- a/locale/de/even-distribution.cfg
+++ b/locale/de/even-distribution.cfg
@@ -29,4 +29,6 @@ inventory-cleanup=Inventar Bereinigung [?]
 inventory-cleanup=Verteile überschüssige Abfall-Gegenstände gleichmäßig auf Maschinen in der Nähe.\n\nInklusive rohe unnützliche Gegenstände, Abfall-Logistikplätze und überschüssige Logistikanforderungen\nErforsche die Abfall-Logistikplätze früher um einfacher Abfall auszuwählen.\n\nSiehe Mod-Einstellungen für Individualisierung.
 
 [message]
+setting-parse-error=[Even Distribution] Ungültiger Wert '__2__' in der Pro-Spieler Mod Einstellung '__1__'__3__. Value has been ignored.
+for-user= von __1__
 usage=[Even Distribution] Wichtig: Wenn du die Maus über mehrere Gebäude ziehst um Items zu verteilen, beginne mit einem Klick auf einem LEEREN FELD!
