--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -30,5 +30,5 @@ inventory-cleanup=Evenly distribute excess trash items into nearby machines.\n\n
 
 [message]
 setting-parse-error=[Even Distribution] Invalid value '__2__' in per-player mod setting '__1__'__3__. Value has been ignored.
-for-user= for user __1__
+for-user= of __1__
 usage=[Even Distribution] Remember: When distributing items, start dragging the mouse while NOT hovering over a building.
