--- a/locale/de/even-distribution.cfg
+++ b/locale/de/even-distribution.cfg
@@ -1,22 +1,18 @@
 [mod-setting-name]
-enable-ed=Even Distribution aktivieren
 distribution-delay=Zeit bis zur Verteilung
-take-from-car=Gegenstände aus dem Auto miteinbeziehen
 max-inventory-cleanup-drop-range=Maximale Verteilungsreichweite
-inventory-cleanup-custom-trash=Inventar Bereinigungs Abfall-Liste
-early-autotrash-research=Frühzeitige Erforschung der Abfall-Logistikplätze
-cleanup-logistic-request-overflow=Bereinige überschüssige Logistikanforderungen
 drop-trash-to-chests=Verteile Abfall auf Truhen
 ignored-entities=Ignorierte Bauten
 
+enable-ed=VERALTET - Nicht ändern!
+take-from-car=VERALTET - Nicht ändern!
+inventory-cleanup-custom-trash=VERALTET - Nicht ändern!
+early-autotrash-research=VERALTET - Nicht ändern!
+cleanup-logistic-request-overflow=VERALTET - Nicht ändern!
+
 [mod-setting-description]
-enable-ed=Der Inventar Bereinigungs-Hotkey ist immer aktiviert.
 distribution-delay=Die Zeit in Sekunden, die gewartet werden soll, bis die Gegenstände gleichmäßig auf mehrere Gebäude verteilt werden.
-take-from-car=Wenn aktiviert, werden Gegenstände aus dem Fahrzeug, das der Spieler gerade fährt, in die gleichmäßige Verteilung miteinbezogen.
 max-inventory-cleanup-drop-range=Zur Verwendung mit Inventar Bereinigungs-Hotkey (SHIFT + C)!\n\nMaximale Verteilungsreichweite. Eigentliche Reichweite basiert auf der Reichweite des Charakters. Hohe Werte können die Performance beeinflussen.
-inventory-cleanup-custom-trash=Zur Verwendung mit Inventar Bereinigungs-Hotkey (SHIFT + C)!\n\nZusätzliche Liste mit Müll-Gegenständen. Der Hotkey verteilt überschüssige Müll-Gegenstände gleichmäßig auf Maschinen in der Nähe. Überschrieben durch die Abfall-Logistikplätze.\n\n Gegenstandsnamen mit der gewünschten Anzahl, die im Inventar behalten werden soll (getrennt durch Leerzeichen).
-early-autotrash-research=Zur Verwendung mit Inventar Bereinigungs-Hotkey (SHIFT + C)!\n\nErforsche die Abfall-Logistikplätze früher um einfacher Abfall auszuwählen. Der Hotkey verteilt überschüssige Müll-Gegenstände gleichmäßig auf Maschinen in der Nähe.
-cleanup-logistic-request-overflow=Zur Verwendung mit Inventar Bereinigungs-Hotkey (SHIFT + C)!\n\nÜberschüssige Logistikanforderungen werden als Abfall angesehen. Der Hotkey verteilt überschüssige Müll-Gegenstände gleichmäßig auf Maschinen in der Nähe.
 drop-trash-to-chests=Zur Verwendung mit Inventar Bereinigungs-Hotkey (SHIFT + C)!\n\nÜberschüssiger Abfall wird auch auf Truhen in der Nähe, die den Gegenstand bereits beinhalten, verteilt. (Dies gilt nicht für Anforderungskisten)
 ignored-entities=Ziele die bei der Verteilung ignoriert werden.\n\nInterne Namen getrennt durch Leerzeichen.\nBeispiel: "steel-furnace iron-chest"
 
