--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -26,3 +26,14 @@ inventory-cleanup=Evenly distribute excess trash items into nearby machines.\n\n
 setting-parse-error=[Even Distribution] Invalid value '__2__' in per-player mod setting '__1__'__3__. Value has been ignored.
 for-user= of __1__
 usage=[Even Distribution] Remember: When distributing items, start dragging the mouse while NOT hovering over a building.
+
+[fuel-limit-type]
+stacks=Stacks
+items=Items
+mj=MJ
+
+[fuel-limit-tooltip]
+stacks=Current rule: Burners won't get __plural_for_parameter_2_{0=any fuel|50=more than half a stack of fuel|100=more than 1 stack of fuel|rest=more than __1__ stacks of fuel}__ when using CTRL+Click Drag.
+items=Current rule: Burners won't get __plural_for_parameter_1_{0=any fuel|1=more than 1 fuel item|rest=more than __1__ fuel items}__ when using CTRL+Click Drag.
+mj=Current rule: Burners won't get __plural_for_parameter_1_{0=any fuel|rest=more than __1__ MJ worth of fuel}__ when using CTRL+Click Drag.
+disabled=Current rule: No limit.
