Added ammo limit slider

--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -37,3 +37,12 @@ stacks=Current rule: Burners won't get __plural_for_parameter_2_{0=any fuel|50=m
 items=Current rule: Burners won't get __plural_for_parameter_1_{0=any fuel|1=more than 1 fuel item|rest=more than __1__ fuel items}__ when using CTRL+Click Drag.
 mj=Current rule: Burners won't get __plural_for_parameter_1_{0=any fuel|rest=more than __1__ MJ worth of fuel}__ when using CTRL+Click Drag.
 disabled=Current rule: No limit.
+
+[ammo-limit-type]
+stacks=Stacks
+items=Items
+
+[ammo-limit-tooltip]
+stacks=Current rule: Turrets won't get __plural_for_parameter_2_{0=any ammo|50=more than half a stack of ammo|100=more than 1 stack of ammo|rest=more than __1__ stacks of ammo}__ when using CTRL+Click Drag.
+items=Current rule: Turrets won't get __plural_for_parameter_1_{0=any ammo|1=more than 1 magazine|rest=more than __1__ magazines}__ when using CTRL+Click Drag.
+disabled=Current rule: No limit.
