localized settings gui

--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -27,6 +27,17 @@ setting-parse-error=[Even Distribution] Invalid value '__2__' in per-player mod 
 for-user= of __1__
 usage=[Even Distribution] Remember: When distributing items, start dragging the mouse while NOT hovering over a building.
 
+[settings-gui]
+drag-title=Distribute items (CTRL+Click Drag)
+inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__)
+enable=Enable
+fuel-limit=Fuel distribution limit
+ammo-limit=Ammo distribution limit
+distribute-from=Distribute items from
+hand-tooltip=Hand
+inventory-tooltip=Inventory
+car-tooltip=Vehicle you are currently driving
+
 [fuel-limit-type]
 stacks=Stacks
 items=Items
