Added drag mode selector

--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -30,6 +30,8 @@ usage=[Even Distribution] Remember: When distributing items, start dragging the 
 [settings-gui]
 drag-title=Distribute items (CTRL+Click Drag)
 inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__)
+drag-evenly-distribute=Evenly distribute items
+drag-balance-inventories=Balance inventories
 enable=Enable
 fuel-limit=Fuel distribution limit
 ammo-limit=Ammo distribution limit
