--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -12,8 +12,8 @@ cleanup-logistic-request-overflow=DEPRECATED - Dont change!
 
 [mod-setting-description]
 distribution-delay=The delay in seconds before items are evenly distributed over multiple buildings.
-max-inventory-cleanup-drop-range=For use with inventory cleanup hotkey (SHIFT + C)!\n\nMaximum item drop range. Actual drop range scales with character reach distance. High values may impact performance.
-drop-trash-to-chests=For use with inventory cleanup hotkey (SHIFT + C)!\n\nExcess trash items are also dropped to nearby chests already containing the item. (This setting is ignored for requester chests)
+max-inventory-cleanup-drop-range=For use with inventory cleanup hotkey (__CONTROL__inventory-cleanup__)!\n\nMaximum item drop range. Actual drop range scales with character reach distance. High values may impact performance.
+drop-trash-to-chests=For use with inventory cleanup hotkey (__CONTROL__inventory-cleanup__)!\n\nExcess trash items are also dropped to nearby chests already containing the item. (This setting is ignored for requester chests)
 ignored-entities=Entities that are ignored when distributing in any way.\n\nEntity names seperated by spaces.\nExample: "steel-furnace iron-chest"
 
 [controls]
@@ -28,7 +28,7 @@ for-user= of __1__
 usage=[Even Distribution] Remember: When distributing items, start dragging the mouse while NOT hovering over a building.
 
 [settings-gui]
-drag-title=Distribute items (CTRL+Click Drag)
+drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__)
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance inventories
@@ -49,7 +49,7 @@ mj=MJ
 stacks=Current rule: Burners won't get __plural_for_parameter_2_{0=any fuel|50=more than half a stack of fuel|100=more than 1 stack of fuel|rest=more than __1__ stacks of fuel}__ when using CTRL+Click Drag.
 items=Current rule: Burners won't get __plural_for_parameter_1_{0=any fuel|1=more than 1 fuel item|rest=more than __1__ fuel items}__ when using CTRL+Click Drag.
 mj=Current rule: Burners won't get __plural_for_parameter_1_{0=any fuel|rest=more than __1__ MJ worth of fuel}__ when using CTRL+Click Drag.
-disabled=Current rule: No limit.
+disabled=Current rule: No limit.\n\nClick to add rule.
 
 [ammo-limit-type]
 stacks=Stacks
@@ -58,4 +58,4 @@ items=Items
 [ammo-limit-tooltip]
 stacks=Current rule: Turrets won't get __plural_for_parameter_2_{0=any ammo|50=more than half a stack of ammo|100=more than 1 stack of ammo|rest=more than __1__ stacks of ammo}__ when using CTRL+Click Drag.
 items=Current rule: Turrets won't get __plural_for_parameter_1_{0=any ammo|1=more than 1 magazine|rest=more than __1__ magazines}__ when using CTRL+Click Drag.
-disabled=Current rule: No limit.
+disabled=Current rule: No limit.\n\nClick to add rule.
