--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -4,7 +4,7 @@ distribution-delay=Distribution delay
 take-from-car=Take items from car
 max-inventory-cleanup-drop-range=Max inventory cleanup drop range
 inventory-cleanup-custom-trash=Inventory cleanup custom trash
-early-autotrash-research=Early Autotrash Research
+early-autotrash-research=Always show logistics tab
 cleanup-logistic-request-overflow=Cleanup logistic request overflow
 drop-trash-to-chests=Drop trash to chests
 ignored-entities=Ignored entities
@@ -13,11 +13,11 @@ ignored-entities=Ignored entities
 enable-ed=This does not affect the inventory cleanup hotkey.
 distribution-delay=The delay in seconds before items are evenly distributed over multiple buildings.
 take-from-car=If activated items are also taken from the car the player is driving.
-max-inventory-cleanup-drop-range=For use with inventory cleanup hotkey (SHIFT + C)!\n\nMaximum item drop range. Actual drop range scales with character reach distance. High values may impact performance.
-inventory-cleanup-custom-trash=For use with inventory cleanup hotkey (SHIFT + C)!\n\nAdditional custom list of items that are considered trash. The hotkey will evenly distribute excess trash items into nearby machines. Overridden by autotrash.\n\nItem names with desired amounts to keep in inventory (seperated by spaces).
-early-autotrash-research=For use with inventory cleanup hotkey (SHIFT + C)!\n\nResearch autotrash earlier for easier selection of trash items. The hotkey will evenly distribute excess trash items into nearby machines.
-cleanup-logistic-request-overflow=For use with inventory cleanup hotkey (SHIFT + C)!\n\nItems which exceed the players logistic request amount are also considered trash. The hotkey will evenly distribute excess trash items into nearby machines.
-drop-trash-to-chests=For use with inventory cleanup hotkey (SHIFT + C)!\n\nExcess trash items are also dropped to nearby chests already containing the item. (This setting is ignored for requester chests)
+max-inventory-cleanup-drop-range=For inventory cleanup hotkey (SHIFT+C)\n\nMaximum item drop range. Actual drop range scales with character reach distance. High values may impact performance.
+inventory-cleanup-custom-trash=For inventory cleanup hotkey (SHIFT+C)\n\nAdditional custom list of items that are considered trash. SHIFT+C will evenly distribute excess trash items into nearby machines. Overridden by autotrash.\n\nItem names with desired amounts to keep in inventory (seperated by spaces).
+early-autotrash-research=For inventory cleanup hotkey (SHIFT+C)\n\nAlways show logistics tab in inventory for easier selection of trash items. SHIFT+C will evenly distribute excess trash items into nearby machines.
+cleanup-logistic-request-overflow=For inventory cleanup hotkey (SHIFT+C)\n\nItems which exceed the players logistic request amount are also considered trash. SHIFT+C will evenly distribute excess trash items into nearby machines.
+drop-trash-to-chests=For inventory cleanup hotkey (SHIFT+C)\n\nExcess trash items are also dropped to nearby chests already containing the item. (This setting is ignored for requester chests)
 ignored-entities=Entities that are ignored when distributing in any way.\n\nEntity names seperated by spaces.\nExample: "steel-furnace iron-chest"
 
 [controls]
