Improved settings gui, functionality WIP

--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -17,10 +17,14 @@ drop-trash-to-chests=For use with inventory cleanup hotkey (__CONTROL__inventory
 ignored-entities=Entities that are ignored when distributing in any way.\n\nEntity names seperated by spaces.\nExample: "steel-furnace iron-chest"
 
 [controls]
-inventory-cleanup=Inventory Cleanup [?]
+inventory-cleanup=Inventory Cleanup
+open-even-distribution-settings=Open Even Distribution settings
 	
 [controls-description]
 inventory-cleanup=Evenly distribute excess trash items into nearby machines.\n\nIncluding raw unwanted items, trash slots and autotrashed items.\nEnable autotrash earlier for easier selection of trash items.\n\nSee mod settings for customization.
+
+[shortcut]
+open-even-distribution-settings=Even Distribution settings (__CONTROL__open-even-distribution-settings__)
 
 [message]
 setting-parse-error=[Even Distribution] Invalid value '__2__' in per-player mod setting '__1__'__3__. Value has been ignored.
@@ -28,13 +32,14 @@ for-user= of __1__
 usage=[Even Distribution] Remember: When distributing items, start dragging the mouse while NOT hovering over a building.
 
 [settings-gui]
+close=Close (__CONTROL__open-even-distribution-settings__)
 drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__)
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance inventories
 enable=Enable
-fuel-limit=Fuel distribution limit
-ammo-limit=Ammo distribution limit
+fuel-limit=Fuel limit
+ammo-limit=Ammo limit
 distribute-from=Distribute items from
 hand-tooltip=Hand
 inventory-tooltip=Inventory
@@ -49,7 +54,7 @@ mj=MJ
 stacks=Current rule: Burners won't get __plural_for_parameter_2_{0=any fuel|50=more than half a stack of fuel|100=more than 1 stack of fuel|rest=more than __1__ stacks of fuel}__ when using CTRL+Click Drag.
 items=Current rule: Burners won't get __plural_for_parameter_1_{0=any fuel|1=more than 1 fuel item|rest=more than __1__ fuel items}__ when using CTRL+Click Drag.
 mj=Current rule: Burners won't get __plural_for_parameter_1_{0=any fuel|rest=more than __1__ MJ worth of fuel}__ when using CTRL+Click Drag.
-disabled=Current rule: No limit.\n\nClick to add rule.
+disabled=Current rule: No fuel limit.\n\nClick checkbox to add limit.
 
 [ammo-limit-type]
 stacks=Stacks
@@ -58,4 +63,4 @@ items=Items
 [ammo-limit-tooltip]
 stacks=Current rule: Turrets won't get __plural_for_parameter_2_{0=any ammo|50=more than half a stack of ammo|100=more than 1 stack of ammo|rest=more than __1__ stacks of ammo}__ when using CTRL+Click Drag.
 items=Current rule: Turrets won't get __plural_for_parameter_1_{0=any ammo|1=more than 1 magazine|rest=more than __1__ magazines}__ when using CTRL+Click Drag.
-disabled=Current rule: No limit.\n\nClick to add rule.
+disabled=Current rule: No ammo limit.\n\nClick checkbox to add limit.
