--- a/locale/de/even-distribution.cfg
+++ b/locale/de/even-distribution.cfg
@@ -17,7 +17,7 @@ drop-trash-to-chests=Zur Verwendung mit Inventar Bereinigungs-Hotkey (SHIFT + C)
 ignored-entities=Ziele die bei der Verteilung ignoriert werden.\n\nInterne Namen getrennt durch Leerzeichen.\nBeispiel: "steel-furnace iron-chest"
 
 [controls]
-inventory-cleanup=Inventar Bereinigung [?]
+inventory-cleanup=Inventar Bereinigung
 
 [controls-description]
 inventory-cleanup=Verteile überschüssige Müll-Items gleichmäßig auf Maschinen in der Nähe.\n\nInklusive rohe unnützliche Items, Abfall-Logistikplätze und überschüssige Logistikanforderungen\nErforsche die Abfall-Logistikplätze früher um einfacher Abfall auszuwählen.\n\nSiehe Mod-Einstellungen für Individualisierung.
