--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -35,11 +35,15 @@ usage=[Even Distribution] Remember: When distributing items, start dragging the 
 close=Close (__CONTROL__open-even-distribution-settings__)
 drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__)
+inventory-cleanup-description=Items are configured using the logistics tab (press __CONTROL__controller-gui-logistics-tab__).
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance inventories
+cleanup-request-overflow=Cleanup request overflow
 enable=Enable
 fuel-limit=Fuel limit
 ammo-limit=Ammo limit
+fuel-amount=Fuel amount
+ammo-amount=Ammo amount
 distribute-from=Distribute items from
 hand-tooltip=Hand
 inventory-tooltip=Inventory
@@ -51,16 +55,16 @@ items=Items
 mj=MJ
 
 [fuel-limit-tooltip]
-stacks=Current rule: Burners won't get __plural_for_parameter_2_{0=any fuel|50=more than half a stack of fuel|100=more than 1 stack of fuel|rest=more than __1__ stacks of fuel}__ when using CTRL+Click Drag.
-items=Current rule: Burners won't get __plural_for_parameter_1_{0=any fuel|1=more than 1 fuel item|rest=more than __1__ fuel items}__ when using CTRL+Click Drag.
-mj=Current rule: Burners won't get __plural_for_parameter_1_{0=any fuel|rest=more than __1__ MJ worth of fuel}__ when using CTRL+Click Drag.
-disabled=Current rule: No fuel limit.\n\nClick checkbox to add limit.
+stacks=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: Burners __plural_for_parameter_2_{0=won't get any fuel|50=will get half a stack of fuel|100=will get 1 stack of fuel|rest=will get __1__ stacks of fuel}__.[/color]
+items=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: Burners __plural_for_parameter_1_{0=won't get any fuel|1=will get 1 fuel item|rest=will get __1__ fuel items}__.[/color]
+mj=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: Burners __plural_for_parameter_1_{0=won't get any fuel|rest=will get __1__ MJ worth of fuel}__.[/color]
+disabled=Desired amount of fuel in burners.\n\n[color=128,206,240]Current rule: No fuel limit.[/color]
 
 [ammo-limit-type]
 stacks=Stacks
 items=Items
 
 [ammo-limit-tooltip]
-stacks=Current rule: Turrets won't get __plural_for_parameter_2_{0=any ammo|50=more than half a stack of ammo|100=more than 1 stack of ammo|rest=more than __1__ stacks of ammo}__ when using CTRL+Click Drag.
-items=Current rule: Turrets won't get __plural_for_parameter_1_{0=any ammo|1=more than 1 magazine|rest=more than __1__ magazines}__ when using CTRL+Click Drag.
-disabled=Current rule: No ammo limit.\n\nClick checkbox to add limit.
+stacks=Desired amount of ammo in turrets.\n\n[color=128,206,240]Current rule: Turrets __plural_for_parameter_2_{0=won't get any ammo|50=will get half a stack of ammo|100=will get 1 stack of ammo|rest=will get __1__ stacks of ammo}__.[/color]
+items=Desired amount of ammo in turrets.\n\n[color=128,206,240]Current rule: Turrets __plural_for_parameter_1_{0=won't get any ammo|1=will get 1 magazine|rest=will get __1__ magazines}__.[/color]
+disabled=Desired amount of ammo in turrets.\n\n[color=128,206,240]Current rule: No ammo limit.[/color]
