Balance out inventories mode

--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -37,7 +37,7 @@ drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__)
 inventory-cleanup-description=Items are configured using the logistics tab (press __CONTROL__controller-gui-logistics-tab__).
 drag-evenly-distribute=Evenly distribute items
-drag-balance-inventories=Balance inventories
+drag-balance-inventories=Balance out inventories
 cleanup-request-overflow=Cleanup request overflow
 enable=Enable
 fuel-limit=Fuel limit
