--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -21,7 +21,7 @@ inventory-cleanup=Inventory Cleanup
 open-even-distribution-settings=Open Even Distribution settings
 	
 [controls-description]
-inventory-cleanup=Evenly distribute excess trash items into nearby machines.\n\nIncluding raw unwanted items, trash slots and autotrashed items.\nEnable autotrash earlier for easier selection of trash items.\n\nSee mod settings for customization.
+inventory-cleanup=Evenly distribute excess trash items into nearby machines.
 
 [shortcut]
 open-even-distribution-settings=Even Distribution settings (__CONTROL__open-even-distribution-settings__)
@@ -35,10 +35,18 @@ usage=[Even Distribution] Remember: When distributing items, start dragging the 
 close=Close (__CONTROL__open-even-distribution-settings__)
 drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__)
-inventory-cleanup-description=Items are configured using the logistics tab (press __CONTROL__controller-gui-logistics-tab__).
+inventory-cleanup-description=Evenly distributes excess trash items into nearby machines.
+inventory-cleanup-configure=Items are configured using the [font=default-bold]logistics tab[/font] (press __CONTROL__controller-gui-logistics-tab__).
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance out inventories
-cleanup-request-overflow=Cleanup request overflow
+include-defaults=Include defaults
+include-trashslots=Include trash slots
+include-autotrash=Include auto-trash
+include-autotrash-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]maximum[/font] request limit.
+cleanup-request-overflow=Include logistic request overflow
+cleanup-request-overflow-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]minimum[/font] request limit.
+autofill-description=Evenly fills buildings/vehicles with fuel and ammo when placed.
+autofill-other-mod-detected=Other autofill mod detected!
 enable=Enable
 fuel-limit=Fuel limit
 ammo-limit=Ammo limit
