item replacement + other small tweaks

--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -2,7 +2,7 @@
 distribution-delay=Distribution delay
 max-inventory-cleanup-drop-range=Max inventory cleanup drop range
 drop-trash-to-chests=Drop trash to chests
-ignored-entities=Ignored entities
+ignored-entities=Ignored buildings
 
 enable-ed=DEPRECATED - Dont change!
 take-from-car=DEPRECATED - Dont change!
@@ -14,7 +14,7 @@ cleanup-logistic-request-overflow=DEPRECATED - Dont change!
 distribution-delay=The delay in seconds before items are evenly distributed over multiple buildings.
 max-inventory-cleanup-drop-range=For use with inventory cleanup hotkey (__CONTROL__inventory-cleanup__)!\n\nMaximum item drop range. Actual drop range scales with character reach distance. High values may impact performance.
 drop-trash-to-chests=For use with inventory cleanup hotkey (__CONTROL__inventory-cleanup__)!\n\nExcess trash items are also dropped to nearby chests already containing the item. (This setting is ignored for requester chests)
-ignored-entities=Entities that are ignored when distributing in any way.\n\nEntity names seperated by spaces.\nExample: "steel-furnace iron-chest"
+ignored-entities=Buildings that are ignored when distributing in any way.\n\nInternal entity names seperated by spaces.\nExample: "steel-furnace iron-chest"
 
 [controls]
 inventory-cleanup=Inventory Cleanup
@@ -39,19 +39,16 @@ inventory-cleanup-description=Evenly distributes excess trash items into nearby 
 inventory-cleanup-configure=Items are configured using the [font=default-bold]logistics tab[/font] (press __CONTROL__controller-gui-logistics-tab__).
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance out inventories
+replace-items=Replace other fuel/ammo (e.g. wood with coal)
 include-defaults=Include defaults
 include-trashslots=Include trash slots
 include-autotrash=Include auto-trash
 include-autotrash-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]maximum[/font] request limit.
 cleanup-request-overflow=Include logistic request overflow
 cleanup-request-overflow-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]minimum[/font] request limit.
-autofill-description=Evenly fills buildings/vehicles with fuel and ammo when placed.
-autofill-other-mod-detected=Other autofill mod detected!
 enable=Enable
 fuel-limit=Fuel limit
 ammo-limit=Ammo limit
-fuel-amount=Fuel amount
-ammo-amount=Ammo amount
 distribute-from=Distribute items from
 hand-tooltip=Hand
 inventory-tooltip=Inventory
