--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -1,9 +1,9 @@
 [mod-setting-name]
 distribution-delay=Distribution delay
 max-inventory-cleanup-drop-range=Max inventory cleanup drop range
-drop-trash-to-chests=Drop trash to chests
 ignored-entities=Ignored buildings
 
+drop-trash-to-chests=DEPRECATED - Dont change!
 enable-ed=DEPRECATED - Dont change!
 take-from-car=DEPRECATED - Dont change!
 inventory-cleanup-custom-trash=DEPRECATED - Dont change!
@@ -32,20 +32,20 @@ for-user= of __1__
 usage=[Even Distribution] Remember: When distributing items, start dragging the mouse while NOT hovering over a building.
 
 [settings-gui]
-close=Close (__CONTROL__open-even-distribution-settings__)
 drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__)
 inventory-cleanup-description=Evenly distributes excess trash items into nearby machines.
-inventory-cleanup-configure=Items are configured using the [font=default-bold]logistics tab[/font] (press __CONTROL__controller-gui-logistics-tab__).
+inventory-cleanup-configure=Customize using the [font=default-bold]logistics tab[/font] (press __CONTROL__controller-gui-logistics-tab__).
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance out inventories
-replace-items=Replace other fuel/ammo (e.g. wood with coal)
-include-defaults=Include defaults
-include-trashslots=Include trash slots
-include-autotrash=Include auto-trash
-include-autotrash-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]maximum[/font] request limit.
-cleanup-request-overflow=Include logistic request overflow
-cleanup-request-overflow-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]minimum[/font] request limit.
+replace-items=Replace inferior fuel/ammo (e.g. wood with coal)
+include-defaults-description=By default __CONTROL__inventory-cleanup__ distributes trash items like raw ores, intermediates and science packs.
+include-trashslots-description=__CONTROL__inventory-cleanup__ distributes all items in your [font=default-bold]trash slots[/font].
+include-autotrash-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]maximum[/font] request limit.\n\nOverrides defaults.
+cleanup-request-overflow-description=__CONTROL__inventory-cleanup__ distributes all items [font=default-bold]above[/font] the [font=default-bold]minimum[/font] request amount.\n\nOverrides defaults.
+drop-trash-to-chests=Drop items to chests
+drop-trash-to-chests-description=__CONTROL__inventory-cleanup__ can drop items into nearby chests already containing them.\n(Ignored for requester chests, they always get requested items)
+item-limits=Use fuel/ammo limits from above
 enable=Enable
 fuel-limit=Fuel limit
 ammo-limit=Ammo limit
