cleanup limits + logistics tab fix

--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -7,7 +7,6 @@ drop-trash-to-chests=DEPRECATED - Dont change!
 enable-ed=DEPRECATED - Dont change!
 take-from-car=DEPRECATED - Dont change!
 inventory-cleanup-custom-trash=DEPRECATED - Dont change!
-early-autotrash-research=DEPRECATED - Dont change!
 cleanup-logistic-request-overflow=DEPRECATED - Dont change!
 
 [mod-setting-description]
@@ -15,6 +14,12 @@ distribution-delay=The delay in seconds before items are evenly distributed over
 max-inventory-cleanup-drop-range=For use with inventory cleanup hotkey (__CONTROL__inventory-cleanup__)!\n\nMaximum item drop range. Actual drop range scales with character reach distance. High values may impact performance.
 drop-trash-to-chests=For use with inventory cleanup hotkey (__CONTROL__inventory-cleanup__)!\n\nExcess trash items are also dropped to nearby chests already containing the item. (This setting is ignored for requester chests)
 ignored-entities=Buildings that are ignored when distributing in any way.\n\nInternal entity names seperated by spaces.\nExample: "steel-furnace iron-chest"
+
+[technology-name]
+enable-logistics-tab=Even Distribution
+
+[technology-description]
+enable-logistics-tab=Enables the character logistics tab (press __CONTROL__controller-gui-logistics-tab__). Use it to customize the Inventory Cleanup Hotkey.
 
 [controls]
 inventory-cleanup=Inventory Cleanup
