--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -40,7 +40,9 @@ usage=[Even Distribution] Remember: When distributing items, start dragging the 
 drag-title=Distribute items ([color=128,206,240]CTRL+Click Drag[/color])
 inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__)
 inventory-cleanup-description=Evenly distributes excess trash items into nearby machines.
+inventory-cleanup-list=Includes items from:
 inventory-cleanup-configure=Customize using the [font=default-bold]logistics tab[/font] (press __CONTROL__controller-gui-logistics-tab__).
+inventory-cleanup-ignore=Personal logistic requests override the defaults.
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance out inventories
 replace-items=Replace inferior fuel/ammo (e.g. wood with coal)
