Moved remaining settings

--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -1,19 +1,18 @@
 [mod-setting-name]
-distribution-delay=Distribution delay
-max-inventory-cleanup-drop-range=Max inventory cleanup drop range
-ignored-entities=Ignored buildings
+disable-distribute=Disable [font=default-semibold][color=128,206,240]CTRL+Click Drag[/color][/font] mod globally
+disable-inventory-cleanup=Disable Inventory Cleanup (__CONTROL__inventory-cleanup__) globally
+disable-inventory-fill=Disable Inventory Fill (__CONTROL__inventory-cleanup__) globally
+info=Settings moved... (__CONTROL__open-even-distribution-settings__ in game)
 
+settings-storage=Dont change!
+distribution-delay=DEPRECATED - Dont change!
+max-inventory-cleanup-drop-range=DEPRECATED - Dont change!
+ignored-entities=DEPRECATED - Dont change!
 drop-trash-to-chests=DEPRECATED - Dont change!
 enable-ed=DEPRECATED - Dont change!
 take-from-car=DEPRECATED - Dont change!
 inventory-cleanup-custom-trash=DEPRECATED - Dont change!
 cleanup-logistic-request-overflow=DEPRECATED - Dont change!
-
-[mod-setting-description]
-distribution-delay=The delay in seconds before items are evenly distributed over multiple buildings.
-max-inventory-cleanup-drop-range=For use with inventory cleanup hotkey (__CONTROL__inventory-cleanup__)!\n\nMaximum item drop range. Actual drop range scales with character reach distance. High values may impact performance.
-drop-trash-to-chests=For use with inventory cleanup hotkey (__CONTROL__inventory-cleanup__)!\n\nExcess trash items are also dropped to nearby chests already containing the item. (This setting is ignored for requester chests)
-ignored-entities=Buildings that are ignored when distributing in any way.\n\nInternal entity names seperated by spaces.\nExample: "steel-furnace iron-chest"
 
 [technology-name]
 enable-logistics-tab=Even Distribution
@@ -60,6 +59,11 @@ distribute-from=Distribute items from
 hand-tooltip=Hand
 inventory-tooltip=Inventory
 car-tooltip=Vehicle you are currently driving
+distribution-delay=Distribution delay
+distribution-delay-description=The delay before items are evenly distributed with [font=default-semibold][color=128,206,240]CTRL+Click Drag[/color][/font].
+max-inventory-cleanup-drop-range=__CONTROL__inventory-cleanup__ range
+max-inventory-cleanup-drop-range-description=Maximum range, actual range scales with players reach. Large values may impact performance!
+ignored-entities=Ignored buildings
 
 [fuel-limit-type]
 stacks=Stacks
