--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -41,7 +41,9 @@ inventory-cleanup-title=Inventory Cleanup Hotkey (__CONTROL__inventory-cleanup__
 inventory-cleanup-description=Evenly distributes excess trash items into nearby machines.
 inventory-cleanup-list=Includes items from:
 inventory-cleanup-configure=Customize using the [font=default-bold]logistics tab[/font] (press __CONTROL__controller-gui-logistics-tab__).
-inventory-cleanup-ignore=Personal logistic requests override the defaults.
+inventory-cleanup-override=Personal logistic requests override the defaults.
+inventory-cleanup-ignore=How to ignore items?
+inventory-cleanup-ignore-description=To exclude items from Inventory Cleanup, add any kind of logistic request for them.\nIf you don't actually want to request anything, set the requested amount to 0 and the maximum amount to infinite.
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance out inventories
 replace-items=Replace inferior fuel/ammo (e.g. wood with coal)
