--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -66,6 +66,7 @@ distribution-delay-description=The delay before items are evenly distributed wit
 max-inventory-cleanup-drop-range=__CONTROL__inventory-cleanup__ range
 max-inventory-cleanup-drop-range-description=Maximum range, actual range scales with players reach. Large values may impact performance!
 ignored-entities=Ignored buildings
+globally-disabled=Disabled by map settings
 
 [fuel-limit-type]
 stacks=Stacks
