--- a/locale/en/even-distribution.cfg
+++ b/locale/en/even-distribution.cfg
@@ -1,5 +1,5 @@
 [mod-setting-name]
-disable-distribute=Disable [font=default-semibold][color=128,206,240]CTRL+Click Drag[/color][/font] mod globally
+disable-distribute=Disable [font=default-semibold][color=128,206,240]CTRL+Click Drag[/color][/font] modification globally
 disable-inventory-cleanup=Disable Inventory Cleanup (__CONTROL__inventory-cleanup__) globally
 disable-inventory-fill=Disable Inventory Fill (__CONTROL__inventory-cleanup__) globally
 info=Settings moved... (__CONTROL__open-even-distribution-settings__ in game)
@@ -43,7 +43,7 @@ inventory-cleanup-list=Includes items from:
 inventory-cleanup-configure=Customize using the [font=default-bold]logistics tab[/font] (press __CONTROL__controller-gui-logistics-tab__).
 inventory-cleanup-override=Personal logistic requests override the defaults.
 inventory-cleanup-ignore=How to ignore items?
-inventory-cleanup-ignore-description=To exclude items from Inventory Cleanup, add any kind of logistic request for them.\nIf you don't actually want to request anything, set the requested amount to 0 and the maximum amount to infinite.
+inventory-cleanup-ignore-description=The default items are ignored when you add any kind of logistic request for them.\nIf you don't actually want to request anything, set the requested amount to 0 and the maximum amount to infinite.
 drag-evenly-distribute=Evenly distribute items
 drag-balance-inventories=Balance out inventories
 replace-items=Replace inferior fuel/ammo (e.g. wood with coal)
